[tool.poetry]
name = "voting"
version = "0.1.0"
description = "Telegrm bot for voting every day"
authors = ["Vyacheslav Tamarin <tamarin.vs@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "v20.0a2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
